--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <title>My profile</title>
 </head>
 <body>
-<h3>Name</h3>
+<h3>Name
 
-<h3>Email address</h3>
+Email address
 
-<h3>Student number</h3>
+Student number
 
-<h3>Nationality</h3>
+Nationality
 
-<h3>Religion</h3>
+Religion</h3>
 
