--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 </head>
 <body>
 <h3>Name
-
+Emran
 Email address
-
+s3894684@student.rmit.edu.au
 Student number
-
+3894684
 Nationality
-
-Religion</h3>
-
+Iran/Australia
+Religion
+Christian
+</h3>
