--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 <h3>Name
-Emran
+<p>Emran Radfar</p>
 Email address
-s3894684@student.rmit.edu.au
+<p>s3894684@student.rmit.edu.au</p>
 Student number
-3894684
+3894684</p>
 Nationality
-Iran/Australia
+<p>Iran/Australia</p>
 Religion
-Christian
+<p>Christian</p>
 </h3>
