--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>My profile</title>
-</head>
 <body>
-<h3>Name
-<p>Emran Radfar</p>
-Email address
-<p>s3894684@student.rmit.edu.au</p>
-Student number
-3894684</p>
-Nationality
-<p>Iran/Australia</p>
-Religion
-<p>Christian</p>
-</h3>
-  <dl>
-  <dt>Name?</dt>
-  <dd>- Emran Radfar</dd>
-  <dt>Nationality?</dt>
-  <dd>- Iran/Australia</dd>
+
+<h2>A Description List</h2>
+
+<dl>
+  <dt>Coffee</dt>
+  <dd>- black hot drink</dd>
+  <dt>Milk</dt>
+  <dd>- white cold drink</dd>
 </dl>
-<body>
+
+</body>
+</html>
