--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@ Religion
   <dd>- Iran/Australia</dd>
   <dt><strong>Religion</strong></dt>
   <dd>- Christian</dd>
+  <dt><strong>Languages spoken</strong></dt>
+  <dd>- English, Persian</dd>
 </dl>
 <body>
