--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>My profile</title>
 </head>
 <body>
-<h3>Name
+<h3>My profile
 <p>Emran Radfar</p>
 Email address
 <p>s3894684@student.rmit.edu.au</p>
