--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>My profile</title>
 </head>
 <body>
-<h1>My profile</h1>
+  <h1><strong>My profile</strong></h1>
   <dl>
   <dt><strong>Name</strong></dt>
   <dd>- Emran Radfar</dd>
