--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <title>My profile</title>
 </head>
 <body>
-  h1 {
-  color: green;
-}
-  <h1><strong>My profile</strong></h1>
+  <h1 style="color:blue;"><strong>My profile</strong></h1>
   <dl>
   <dt><strong>Name</strong></dt>
   <dd>- Emran Radfar</dd>
