--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1><strong>My profile</strong></h1>
+  <h2 style="color:blue;"><strong>Personal information</strong></h1>
   <dl>
   <dt style="color:green;"><strong>Name</strong></dt>
   <dd>- Emran Radfar</dd>
