--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <dt style="color:green;"><strong>Languages spoken</strong></dt>
   <dd>- English, Persian</dd>
   <dt style="color:green;"><strong>One interesting fact about me</strong></dt>
-    <dd style="color:green;">-One interesting fact about me is the fact that I hate it when I get tired and feel incredibly powerless, I exercise everyday to make sure this does not happen, and I have as much stamina as possible for any situation that might happen in life. (sounds a bit hardcore yes).</dd>
+    <dd style="color:blue;">-One interesting fact about me is the fact that I hate it when I get tired and feel incredibly powerless, I exercise everyday to make sure this does not happen, and I have as much stamina as possible for any situation that might happen in life. (sounds a bit hardcore yes).</dd>
 </dl>
 <body>
