--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <title>My profile</title>
 </head>
 <body>
-  <h1><strong>My profile</strong></h1>
-  <h2 style="color:blue;"><strong>Personal information</strong></h1>
+  <h1 style="font-family:'Courier New'"><strong>My profile</strong></h1>
+  <h2 style="font-family:'Courier New'" style="color:blue;"><strong>Personal information</strong></h1>
   <dl>
-  <dt style="color:green;"><strong>Name</strong></dt>
+  <dt style="font-family:'Courier New'" style="color:green;"><strong>Name</strong></dt>
   <dd>- Emran Radfar</dd>
-  <dt style="color:green;"><strong>Email address</strong></dt>
+  <dt style="font-family:'Courier New'" style="color:green;"><strong>Email address</strong></dt>
   <dd>- s3894684@student.rmit.edu.au</dd>
-  <dt style="color:green;"><strong>Student number</strong></dt>
+  <dt style="font-family:'Courier New'" style="color:green;"><strong>Student number</strong></dt>
   <dd>- 3894684</dd>
-  <dt style="color:green;"><strong>Nationality</strong></dt>
+  <dt style="font-family:'Courier New'" style="color:green;"><strong>Nationality</strong></dt>
   <dd>- Iran/Australia</dd>
-  <dt style="color:green;"><strong>Religion</strong></dt>
+  <dt style="font-family:'Courier New'" style="color:green;"><strong>Religion</strong></dt>
   <dd>- Christian</dd>
-  <dt style="color:green;"><strong>Languages spoken</strong></dt>
+  <dt style="font-family:'Courier New'" style="color:green;"><strong>Languages spoken</strong></dt>
   <dd>- English, Persian</dd>
-  <dt style="color:green;"><strong>One interesting fact about me</strong></dt>
+  <dt style="font-family:'Courier New'" style="color:green;"><strong>One interesting fact about me</strong></dt>
     <dd style="color:blue;">-One interesting fact about me is the fact that I hate it when I get tired and feel incredibly powerless, I exercise everyday to make sure this does not happen, and I have as much stamina as possible for any situation that might happen in life. (sounds a bit hardcore yes).</dd>
 </dl>
 <body>
