--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1 style="font-family:'Courier New'"><strong>My profile</strong></h1>
-  <h2 style="font-family:'Courier New'" style="color:blue;"><strong>Personal information</strong></h1>
+  <h2 style="font-family:'Courier New';color:blue;"><strong>Personal information</strong></h1>
   <dl>
   <dt style="font-family:'Courier New'" style="color:green;"><strong>Name</strong></dt>
   <dd>- Emran Radfar</dd>
