--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1 style="font-family:'Courier New'"><strong>My profile</strong></h1>
-  <img src="EmranR.jpg" alt="a tall man with blue eyes, great jawline and a good haircut">
+  <img src="EmranR.jpg" alt="a tall man with blue eyes, great jawline and a good haircut" width="500" height="600">
   <h2 style="font-family:'Courier New';color:blue;"><strong>Personal information</strong></h1>
   <dl>
   <dt style="font-family:'Courier New';color:green;"><strong>Name</strong></dt>
