--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   <dd style="font-family:'Courier New'">- English, Persian</dd>
   <dt style="font-family:'Courier New';color:green;"><strong>One interesting fact about me</strong></dt>
     <dd style="font-family:'Courier New';color:blue;">-One interesting fact about me is the fact that I hate it when I get tired and feel incredibly powerless, I exercise everyday to make sure this does not happen, and I have as much stamina as possible for any situation that might happen in life. (sounds a bit hardcore yes).</dd>
+    <h2 style="font-family:'Courier New'"><strong>Interest in IT</strong></h2>
 </dl>
 <body>
