--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@ Specific coursework and in-demand skill sets to look for in an IT security speci
     </strong></dd>
     <dt style="font-family:'Courier New';color:green;"><strong>IT Security Specialist Certifications</strong></dt>
  <ol style="font-family:'Courier New'">
-<li>List item one</li>
-<li>a second list item</li>
-<li>a third item here</li>
+<li>CompTIA - Security+</li>
+<li>(ISC)2 - Certified Information Systems Security Professional (CISSP)</li>
+<li>EC-Council - Certified Ethical Hacker (CEH)</li>
+<li>ISACA - Certified Information Systems Auditor (CISA)</li>
+<li>Cisco Certified Network Associate - Security (CCNA Security)</li>
+<li>Check Point Certified Security Administrator (CCSA)</li>
+<li>GIAC - Certified Intrusion Analyst (GCIA)</li>
 </ol>
     
     
