--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@ Specific coursework and in-demand skill sets to look for in an IT security speci
     </strong></dd>
     <dt style="font-family:'Courier New';color:green;"><strong>IT Security Specialist Certifications</strong></dt>
  <ol style="font-family:'Courier New'">
-<ul>CompTIA - Security+</ul>
-<ul>(ISC)2 - Certified Information Systems Security Professional (CISSP)</ul>
-<ul>EC-Council - Certified Ethical Hacker (CEH)</ul>
-<ul>ISACA - Certified Information Systems Auditor (CISA)</ul>
-<ul>Cisco Certified Network Associate - Security (CCNA Security)</ul>
-<ul>Check Point Certified Security Administrator (CCSA)</ul>
-<ul>GIAC - Certified Intrusion Analyst (GCIA)</ul>
+<ul>• CompTIA - Security+</ul>
+<ul>• (ISC)2 - Certified Information Systems Security Professional (CISSP)</ul>
+<ul>• EC-Council - Certified Ethical Hacker (CEH)</ul>
+<ul>• ISACA - Certified Information Systems Auditor (CISA)</ul>
+<ul>• Cisco Certified Network Associate - Security (CCNA Security)</ul>
+<ul>• Check Point Certified Security Administrator (CCSA)</ul>
+<ul>• GIAC - Certified Intrusion Analyst (GCIA)</ul>
 </ol>
     
     
